# IC_Project2

./: .gitignore  README.md
src/: CMakeLists.txt  circularBuffer.h  codec_golomb.h  codec_image.h  decoder_image.cpp  encodedSamples.txt  encoder_image.cpp  ex1.cpp  ex2.cpp  ex2_a.cpp  ex2_ba.cpp  ex2_bb.cpp  ex2_c.cpp  ex2_d.cpp  ex6.cpp  golomb.h  golomb_code_tests.cpp  golomb_codec_tests.cpp  out.ppm  secgolomb.cpp  secgolomb.h
